# mini-os

./: .gitignore  Cargo.toml  README.md  build.rs  build_utils.sh
.cargo/: config.toml
.github/workflows/: rust.yml
kernel/: Cargo.toml  arm64-apple-macosx.json  x86_64-unknown-none.json
kernel/src/: logger.rs  main.rs
src/: main.rs
