[package]
name = "mini-os"
version = "0.1.0"
edition = "2021"

[build-dependencies]
bootloader = "0.11"
kernel-wrap = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[dependencies]
# used for UEFI booting in QEMU
ovmf-prebuilt = "0.1.0-alpha.1"


[workspace]
members = ["kernel"]

# disable unwinding
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

