[package]
name = "kernel-wrap"
version = "0.1.0"
edition = "2024"

[dependencies]
#bootloader = "0.11"
bootloader_api = "0.11.9"
lazy_static = {version = "1.5.0", default-features = false, features = ["spin_no_std"]}
linked_list_allocator = "0.10.5"
spin = "0.9.8"

[dependencies.font8x8]
version = "0.2.5"
default-features = false
features = ["unicode"]
